tests/snapshots/run_wpt_conformance__coreml_quantized_maxPool2d.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized maxPool2d, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: CoreML pooling currently supports only NCHW layout; got 'nhwc' for maxPool2d

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    input: f32[1, 2, 2, 1];
  }

  consts {
    operand_1: f32[1, 1, 1, 1] @bytes([224, 169, 175, 62]);
    operand_2: i8[1, 1, 1, 1] @bytes([128]);
    operand_3: f32[1, 1, 1, 1] @bytes([224, 169, 175, 62]);
    operand_4: i8[1, 1, 1, 1] @bytes([128]);
  }

  nodes {
    [operand_5] = quantizeLinear(input, operand_1, operand_2, label="");
    [operand_6] = dequantizeLinear(operand_5, operand_1, operand_2, label="");
    [operand_7] = maxPool2d(operand_6, dilations=[], label="", layout="nhwc", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
    [operand_8] = quantizeLinear(operand_7, operand_3, operand_4, label="");
    [output] = dequantizeLinear(operand_8, operand_3, operand_4, label="");
  }

  outputs { output; }
}
